gcc/testsuite/cobol.dg/error-1.cob
*> { dg-do compile }
IDENTIFICATION DIVISION.
PROGRAM-ID. error-1.
ENVIRONMENT DIVISION.
DATA DIVISION.
    WORKING-STORAGE SECTION.
    02 VAR PIC S9(3) VALUE 1. *> { dg-error "not part of" }
PROCEDURE DIVISION.
    STOP RUN.
